Bug 162582 - Find toolbar's "Search key not found" error message has incompatible colors in dark mode, especially its icon (Sifr dark theme only)
Summary: Find toolbar's "Search key not found" error message has incompatible colors i...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
24.8.0.3 release
Hardware: All All
: medium trivial
Assignee: Heiko Tietze
URL:
Whiteboard: target:25.2.0 target:24.8.2
Keywords:
Depends on:
Blocks: UI-Theming Find-Toolbar Linux-Dark-Mode
  Show dependency treegraph
 
Reported: 2024-08-23 03:46 UTC by Jeff F.
Modified: 2024-08-27 18:59 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (22.88 KB, image/png)
2024-08-23 03:46 UTC, Jeff F.
Details
Proposed solution (86.88 KB, image/png)
2024-08-27 09:34 UTC, Heiko Tietze
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jeff F. 2024-08-23 03:46:38 UTC
Created attachment 195974 [details]
Screenshot

Please see the attached screenshot, running in dark theme mode on Linux's GTK3 version.
It shows a couple of issues with that error message:

* The lightbulb icon is white on light-sky-blue, so it is nearly invisible due to its poor contrast.

* The sky-blue background color is very bright / glaring compared to the rest of the dark theme. It might be worth considering lowering its brightness significantly and making the foreground text white.

* Blue might not be the correct color choice in this situation, as it is an error message / failure. Red or orange might be more appropriate?

---

Tested on:

Version: 24.8.0.3 (X86_64) / LibreOffice Community
Build ID: 0bdf1299c94fe897b119f97f3c613e9dca6be583
CPU threads: 8; OS: Linux 6.10; UI render: default; VCL: gtk3
Flatpak
Comment 1 V Stuart Foote 2024-08-23 11:55:10 UTC
Confirmed, but only with 'Sifr (dark)' icon theme.

Other icon themes appear fine.

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a05432f02b6441b66addc0f22f1b8444557ac37b
CPU threads: 8; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 2 Jeff F. 2024-08-24 18:29:20 UTC
I believe the other points, about the sky-blue background color being too bright or potentially not the right color hue at all either, still happen no matter which icon theme is used, no?
Comment 3 V Stuart Foote 2024-08-25 17:14:40 UTC
Dark blue text on a lighter blue background is very readable on the Windows builds. Also, making the background red or orange would be garish--screaming at the user. It is a result, not an error.

IMHO adjust the Sifr dark icon theme but leave the message body alone.
Comment 4 Heiko Tietze 2024-08-26 06:10:49 UTC
We have four notification/message type colors not only used at the statusbar but also for the infobar. If we mute those in case of dark background, the Sifr Dark icon should work well. Need to check if this has side-effects.
Comment 5 Heiko Tietze 2024-08-27 09:34:25 UTC
Created attachment 196040 [details]
Proposed solution

Depending on the dialog background the color is light blue on bright themes (using Sifr icons) or much darker on dark themes (using Sifr Dark). Both take the font color from the dialog, ie. black or white instead of dark blue.
Comment 6 Commit Notification 2024-08-27 12:46:53 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4702e9ecfc66dc0f624ec73670092fd3062ae327

Resolves tdf#162582 - Muted color for search info on dark themes

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2024-08-27 18:59:59 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/9d4cdb391d41a36f622d626314691a53528590df

Resolves tdf#162582 - Muted color for search info on dark themes

It will be available in 24.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.