Resolves tdf#162582 - Muted color for search info on dark themes

Change-Id: Ia4dddc05e0f90c4d3bca1ef8ab860b588743af3b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172456
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>